--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=put" method="post">
+    <form action="/campgrounds/<%= campground._id %>?_method=put" method="post" class="validated-form" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -11,6 +11,7 @@
           name="campground[title]"
           id="title"
           value="<%= campground.title %>"
+          required
         />
       </div>
       <div class="mb-3">
@@ -21,6 +22,7 @@
           name="campground[location]"
           id="location"
           value="<%= campground.location %>"
+          required
         />
       </div>
       <div class="mb-3">
@@ -31,6 +33,7 @@
           name="campground[image]"
           id="image"
           value="<%= campground.image %>"
+          required
         />
       </div>
       <div class="mb-3">
@@ -40,6 +43,7 @@
           type="text"
           name="campground[description]"
           id="description"
+          required
         >
 <%= campground.description %></textarea
         >
@@ -57,6 +61,7 @@
             aria-describedby="price-label"
             name="campground[price]"
             value="<%= campground.price %>"
+            required
           />
         </div>
       </div>
