--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="post">
+    <form action="/campgrounds" method="post" class="validated-form" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -10,6 +10,7 @@
           type="text"
           name="campground[title]"
           id="title"
+          required
         />
       </div>
       <div class="mb-3">
@@ -19,6 +20,7 @@
           type="text"
           name="campground[location]"
           id="location"
+          required
         />
       </div>
       <div class="mb-3">
@@ -28,6 +30,7 @@
           type="text"
           name="campground[image]"
           id="image"
+          required
         />
       </div>
       <div class="mb-3">
@@ -37,6 +40,7 @@
           type="text"
           name="campground[description]"
           id="description"
+          required
         ></textarea>
       </div>
       <div class="mb-3">
@@ -51,6 +55,7 @@
             aria-label="price"
             aria-describedby="price-label"
             name="campground[price]"
+            required
           />
         </div>
       </div>
@@ -61,3 +66,4 @@
     </form>
   </div>
 </div>
+
