--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,13 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=put" method="post" class="validated-form" novalidate>
+    <form
+      action="/campgrounds/<%= campground._id %>?_method=put"
+      method="post"
+      class="validated-form"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -26,15 +32,8 @@
         />
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[image]"
-          id="image"
-          value="<%= campground.image %>"
-          required
-        />
+        <label class="form-label" for="image">Upload More Images</label>
+        <input class="form-control" type="file" name="image" id="image" />
       </div>
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
@@ -64,6 +63,20 @@
             required
           />
         </div>
+      </div>
+      <div class="mb-3">
+        <% campground.images.forEach(function(img,i){%>
+        <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail" />
+        <div class="form-check-inline">
+          <input
+            type="checkbox"
+            name="deleteImages[]"
+            id="image-<%= i %>"
+            value="<%= img.filename %>"
+          />
+        </div>
+        <label for="image-<%= i %>">Delete?</label>
+        <% }) %>
       </div>
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
