--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,13 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="post" class="validated-form" novalidate>
+    <form
+      action="/campgrounds"
+      method="post"
+      class="validated-form"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -24,13 +30,13 @@
         />
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
+        <label class="form-label" for="image">Upload Images</label>
         <input
           class="form-control"
-          type="text"
-          name="campground[image]"
+          type="file"
+          name="image"
           id="image"
-          required
+          multiple
         />
       </div>
       <div class="mb-3">
@@ -66,4 +72,3 @@
     </form>
   </div>
 </div>
-
