--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,87 +1,91 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
+<div class="row mb-5">
   <h1 class="text-center">Edit Campground</h1>
-  <div class="col-6 offset-3">
-    <form
-      action="/campgrounds/<%= campground._id %>?_method=put"
-      method="post"
-      class="validated-form"
-      novalidate
-      enctype="multipart/form-data"
-    >
-      <div class="mb-3">
-        <label class="form-label" for="title">Title</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[title]"
-          id="title"
-          value="<%= campground.title %>"
-          required
-        />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="location">Location</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[location]"
-          id="location"
-          value="<%= campground.location %>"
-          required
-        />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="image">Upload More Images</label>
-        <input class="form-control" type="file" name="image" id="image" />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="description">Description</label>
-        <textarea
-          class="form-control"
-          type="text"
-          name="campground[description]"
-          id="description"
-          required
+  <div class="col-md-6 offset-md-3">
+    <div class="card shadow">
+      <div class="card-body">
+        <form
+          action="/campgrounds/<%= campground._id %>?_method=put"
+          method="post"
+          class="validated-form"
+          novalidate
+          enctype="multipart/form-data"
         >
+          <div class="mb-3">
+            <label class="form-label" for="title">Title</label>
+            <input
+              class="form-control"
+              type="text"
+              name="campground[title]"
+              id="title"
+              value="<%= campground.title %>"
+              required
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="location">Location</label>
+            <input
+              class="form-control"
+              type="text"
+              name="campground[location]"
+              id="location"
+              value="<%= campground.location %>"
+              required
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="image">Upload More Images</label>
+            <input class="form-control" type="file" name="image" id="image" />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="description">Description</label>
+            <textarea
+              class="form-control"
+              type="text"
+              name="campground[description]"
+              id="description"
+              required
+            >
 <%= campground.description %></textarea
-        >
+            >
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="price">Campground Price</label>
+            <div class="input-group">
+              <span class="input-group-text" id="price-label">$</span>
+              <input
+                id="price"
+                type="text"
+                class="form-control"
+                placeholder="0.00"
+                aria-label="price"
+                aria-describedby="price-label"
+                name="campground[price]"
+                value="<%= campground.price %>"
+                required
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <% campground.images.forEach(function(img,i){%>
+            <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail" />
+            <div class="form-check-inline">
+              <input
+                type="checkbox"
+                name="deleteImages[]"
+                id="image-<%= i %>"
+                value="<%= img.filename %>"
+              />
+            </div>
+            <label for="image-<%= i %>">Delete?</label>
+            <% }) %>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-info">Update Campground</button>
+          </div>
+          <a href="/campgrounds/<%= campground._id %>">Cancel</a>
+        </form>
       </div>
-      <div class="mb-3">
-        <label class="form-label" for="price">Campground Price</label>
-        <div class="input-group">
-          <span class="input-group-text" id="price-label">$</span>
-          <input
-            id="price"
-            type="text"
-            class="form-control"
-            placeholder="0.00"
-            aria-label="price"
-            aria-describedby="price-label"
-            name="campground[price]"
-            value="<%= campground.price %>"
-            required
-          />
-        </div>
-      </div>
-      <div class="mb-3">
-        <% campground.images.forEach(function(img,i){%>
-        <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail" />
-        <div class="form-check-inline">
-          <input
-            type="checkbox"
-            name="deleteImages[]"
-            id="image-<%= i %>"
-            value="<%= img.filename %>"
-          />
-        </div>
-        <label for="image-<%= i %>">Delete?</label>
-        <% }) %>
-      </div>
-      <div class="mb-3">
-        <button class="btn btn-info">Update Campground</button>
-      </div>
-      <a href="/campgrounds/<%= campground._id %>">Cancel</a>
-    </form>
+    </div>
   </div>
 </div>
