--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,6 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px"></div>
-<div>
-  <h1>All Campgrounds</h1>
-  <a href="/campgrounds/new">Add Campground</a>
-</div>
+<div id="cluster-map"></div>
+
 <% for(let campground of campgrounds){%>
 <div class="card mb-3">
   <div class="row">
