--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,74 +1,78 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
+<div class="row mb-5">
   <h1 class="text-center">New Campground</h1>
-  <div class="col-6 offset-3">
-    <form
-      action="/campgrounds"
-      method="post"
-      class="validated-form"
-      novalidate
-      enctype="multipart/form-data"
-    >
-      <div class="mb-3">
-        <label class="form-label" for="title">Title</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[title]"
-          id="title"
-          required
-        />
+  <div class="col-md-6 offset-md-3">
+    <div class="card shadow">
+      <div class="card-body">
+        <form
+          action="/campgrounds"
+          method="post"
+          class="validated-form"
+          novalidate
+          enctype="multipart/form-data"
+        >
+          <div class="mb-3">
+            <label class="form-label" for="title">Title</label>
+            <input
+              class="form-control"
+              type="text"
+              name="campground[title]"
+              id="title"
+              required
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="location">Location</label>
+            <input
+              class="form-control"
+              type="text"
+              name="campground[location]"
+              id="location"
+              required
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="image">Upload Images</label>
+            <input
+              class="form-control"
+              type="file"
+              name="image"
+              id="image"
+              multiple
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="description">Description</label>
+            <textarea
+              class="form-control"
+              type="text"
+              name="campground[description]"
+              id="description"
+              required
+            ></textarea>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="price">Campground Price</label>
+            <div class="input-group">
+              <span class="input-group-text" id="price-label">$</span>
+              <input
+                id="price"
+                type="text"
+                class="form-control"
+                placeholder="0.00"
+                aria-label="price"
+                aria-describedby="price-label"
+                name="campground[price]"
+                required
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-success">Add Campground</button>
+          </div>
+          <a href="/campgrounds">Cancel</a>
+        </form>
       </div>
-      <div class="mb-3">
-        <label class="form-label" for="location">Location</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[location]"
-          id="location"
-          required
-        />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="image">Upload Images</label>
-        <input
-          class="form-control"
-          type="file"
-          name="image"
-          id="image"
-          multiple
-        />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="description">Description</label>
-        <textarea
-          class="form-control"
-          type="text"
-          name="campground[description]"
-          id="description"
-          required
-        ></textarea>
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="price">Campground Price</label>
-        <div class="input-group">
-          <span class="input-group-text" id="price-label">$</span>
-          <input
-            id="price"
-            type="text"
-            class="form-control"
-            placeholder="0.00"
-            aria-label="price"
-            aria-describedby="price-label"
-            name="campground[price]"
-            required
-          />
-        </div>
-      </div>
-      <div class="mb-3">
-        <button class="btn btn-success">Add Campground</button>
-      </div>
-      <a href="/campgrounds">Cancel</a>
-    </form>
+    </div>
   </div>
 </div>
