--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
+    <a class="navbar-brand" href="/">YelpCamp</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Register">Register</a>
+          <a class="nav-link" href="/register">Register</a>
         </li>
         <% } else { %>
         <li class="nav-item">
