--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -7,7 +7,12 @@
       <div class="carousel-inner">
         <% campground.images.forEach((img,i)=>{ %>
         <div class="carousel-item <%= i===0 ? 'active' : '' %>">
-          <img class="d-block w-100" src="<%= img.url %>" alt="" crossorigin="anonymous"/>
+          <img
+            class="d-block w-100"
+            src="<%= img.url %>"
+            alt=""
+            crossorigin="anonymous"
+          />
         </div>
         <% }) %>
       </div>
@@ -136,6 +141,12 @@
         </form>
       </div>
     </div>
+    <% } else{%>
+    <a
+      href="/login?returnTo=/campgrounds/<%= campground._id %>"
+      class="btn btn-lg btn-primary mb-2"
+      >Leave a Review</a
+    >
     <% } %> <% for(let review of campground.reviews){ %>
     <div class="card mb-3">
       <div class="card-body">
