fix minor issues

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -144,7 +144,7 @@
     <% } else{%>
     <a
       href="/login?returnTo=/campgrounds/<%= campground._id %>"
-      class="btn btn-lg btn-primary mb-2"
+      class="btn btn-md btn-primary mb-2"
       >Leave a Review</a
     >
     <% } %> <% for(let review of campground.reviews){ %>
